History
=======

Version 0.4 - unreleased
------------------------

New features
~~~~~~~~~~~~

- Pass on raw item as received from the collector to the composer
  (template).  Making use of this raw item will obviously bind the
  implementation of the composer to that of the collector.  However,
  it's considered useful for custom implementations that need total
  control and that know what collector they'll be using.

  This required an API change in IComposer.render(); the ``items``
  argument is now a list of 2-tuples instead of a list of formatted
  items.
  [nouri]

- Added Polish translation by Barbara Struk
  [naro]

- Added another type of scheduler: TimedScheduler.  This one allows to
  schedule a number of send-outs with an exact datetime.  Its main use
  is for the "send newsletter" form on a context where we want to
  specify a send-out date in the future.
  [nouri]

- The confirmation view will now confirm pending subscriptions to any
  channel.  This saves us from having to send a separate confirmation
  e-mail for every channel a user subscribes to.  This feature isn't
  used anywhere in S&D core at this point, but it's useful if you're
  writing custom subscription forms.
  [nouri]

- Added SubjectsCollectorBase template class that you can use to
  create a collector based on a vocabulary.  This vocabulary may come
  from anywhere, like from ATVocabularyManager or from the list of all
  subjects/tags available in your site.
  [nouri]

- Text fields will now per default not be included in the resulting
  message if there are no sibling collectors that produced items.
  E.g. if you have a heading text and a sibling topic collector, the
  heading won't appear if the topic didn't return any items.
  [nouri]

Bugfixes
~~~~~~~~

- Updated installation instructions to use the ``fake-zope-eggs``
  feature of the ``plone.recipe.zope2install`` instead of
  ``fakezope2eggs``.  Also, added ``skip-fake-eggs`` to accommodate
  latest changes in ``plone.z3cform``.